add router to customers

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PASSWORD = "yakov574"
 TOKEN_KEY = "iorherighio"
+TOKEN_KEY_CUSTOMERS = "mlkwrjplorpof"
 TOKEN_SMS = "Ar8@$2LwGh5#6S5770#cQ$p4z9@T@gF7"
